deploy/adminapi/adminapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identityserveradminapitest-deployment
  labels:
    app: identityserveradminapitest
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  selector:
    matchLabels:
      service: identityserveradminapitest
  template:
    metadata:
      labels:
        app: identityserveradminapitest
        service: identityserveradminapitest
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "identityserveradminapitest"
        dapr.io/app-port: "80"
    spec:
      containers:
        - name: identityserveradminapitest
          image: rustemturk/identityserver4-admin-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
              requests:
                memory: 500Mi
                cpu: 100m
