deploy/adminapi/adminapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: identityserveradminapitest-svc
  labels:
    app: identityserveradminapitest
    service: identityserveradminapitest
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    service: identityserveradminapitest
