deploy/adminapi/adminapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: identityserveradminapitest-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: admin-api.skoruba.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: identityserveradminapitest-svc
            port:
              number: 80
